<resources>
    <string name="app_name">FlickList</string>
    <string name="title_home">Home</string>
    <string name="title_movies">Movies</string>
    <string name="title_series">Series</string>
    <string name="title_watchlist">Watchlist</string>
    <string name="title_profile">Profile</string>
    <string name="placeholder_movie_description">Super-assassin John Wick returns with a $14 million price tag on his head and an army of bounty-hunting killers on his trail. After killing a member of the shadowy international assassin’s guild, the High Table, John Wick is excommunicado, but the world’s most ruthless hit men and women await his every turn.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="rating_success">Rating saved.</string>
    <string name="rating_failure">Failed to save rating. Please try again.</string>
    <string name="rating_delete_success">Rating was deleted successfully.</string>
    <string name="rating_delete_failure">Failed to delete rating. Please try again.</string>
</resources>