<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_movies"
        android:icon="@drawable/ic_nav_movies"
        android:title="@string/title_movies" />

    <item
        android:id="@+id/navigation_series"
        android:icon="@drawable/ic_nav_series"
        android:title="@string/title_series" />

    <item
        android:id="@+id/navigation_watchlist"
        android:icon="@drawable/ic_nav_watchlist"
        android:title="@string/title_watchlist" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/title_profile" />

</menu>