<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.rawrick.flicklist.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_movies"
        android:name="com.rawrick.flicklist.ui.movies.MoviesFragment"
        android:label="@string/title_movies"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_series"
        android:name="com.rawrick.flicklist.ui.series.SeriesFragment"
        android:label="@string/title_series"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_watchlist"
        android:name="com.rawrick.flicklist.ui.watchlist.WatchlistFragment"
        android:label="@string/title_series"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.rawrick.flicklist.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_notifications" />
</navigation>